--- a/04_best_practices/04_best_practices.ipynb
+++ b/04_best_practices/04_best_practices.ipynb
@@ -2,41 +2,71 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Best Practices in Machine Learning and Code Organization"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Motivation"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "lines_to_next_cell": 2
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "- What does best-practice even mean?\n",
+    "- How do I know something is a bad practice?"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "> It's not wrong, but it feels wrong."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Overview"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Best Pratices in:\n",
     "- Machine Learning Code Bases and Versioning\n",
@@ -45,103 +75,577 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# Machine Learning"
+    "## Bad vs. Best Practices in Python"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Repetition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Python is not C - so do ***not*** copy-and-paste!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"https://www.gogagah.com/wp-content/uploads/2019/04/Find-the-Difference-1024x576.jpg\" width=380>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Instead of copy & pasting:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- write functions!\n",
+    "- compose functions!\n",
+    "- create partial function!"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "lines_to_next_cell": 2
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code and Module Organization"
+    "from functools import partial\n",
+    "\n",
+    "add2 = partial(add, 2)  # Create a copy of add() with a=2\n",
+    "\n",
+    "add2(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add2 = lambda x: add(2, x)\n",
+    "\n",
+    "add2(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add2(x):\n",
+    "    return add(2, x)\n",
+    "\n",
+    "add2(3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "## Motivation"
+    "### Switch Behavior"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Python has no switch statements, but don't go around stacking if's:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"https://i.redd.it/6rbq35occu441.jpg\" width=300px>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Instead of stacking if-else:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- map things with a dictionary!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Dictionaries are hashmaps, meaning the map a hash to an object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Since Functions are first order objects in Python, they can be pointed to!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "def add_sum(a, b):\n",
+    "    return sum([a, b])\n",
+    "\n",
+    "math_functions = {'add': add_sum}\n",
+    "\n",
+    "math_functions['add'](2, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Depth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Making too many layers - inheritance, nesting, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "<img src=\"https://preview.redd.it/3kz7f2k1psx41.jpg?width=640&crop=smart&auto=webp&s=0c026807888b4c611089b31c740947bf78b5a3c5\" width=400 />"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Instead keep things shallow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Ask yourself:\n",
+    "- Do I need this class?\n",
+    "  - Will it be instantiated often?\n",
+    "  - Are there many objects inheriting from it?\n",
+    "  - Does it carry state? Otherwise its a namespace!\n",
+    "- Does this need to be submodul or a file?\n",
+    "  - Are there many long functions?\n",
+    "  - Are there a large number of private functions?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Singleton Pattern (Single global instance for an Object)\n",
+    "- If it does not carry state, it is a namespace\n",
+    "  - In Python, any file is a namespace! No need for the Object or Instance!\n",
+    "- If it just carries state, you want a database\n",
+    "  - Atomicity of operation can be guaranteed with a database\n",
+    "  - Database outside of Global Interpreter Lock (GIL)\n",
+    "  - Databases scale better!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Readability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Write code - but write it to be read!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "<img src=\"https://i.redd.it/yl1lu031day41.png\" width=400 />"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "## Keep Dependencies to a minimum"
+    "#### Code is written to be read"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Documentation\n",
+    "- Type Hinting\n",
+    "- Naming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Dependencies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Sometimes they're too tempting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "<img src=\"https://i.redd.it/mapjfjami3y41.jpg\" width=400 />"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "## Encapsulation is important"
+    "#### Why?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Projects get abandoned\n",
+    "  - Lack of security patches\n",
+    "  - Forced to stay with old versions\n",
+    "  - => Your project becomes ancient"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Update regularly!\n",
+    "- Small bugs on a regular basis prevent abandonment\n",
+    "- Improved performances\n",
+    "- Additional functionality!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Keep things short"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### The first law of Software Quality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"https://i.redd.it/tozimpm65gy41.jpg\" widht=350 />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Sometimes less functionality is more maintainability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "> Each line of code is a credit you take on and interest is paid in time to maintain the base. Don't default on your code debt."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "<img src=\"https://i.redd.it/tozimpm65gy41.jpg\" widht=400 />"
+    "Finding non-critical code:\n",
+    "- Is this functionality used by many?\n",
+    "- Is this code still used or abandoned?\n",
+    "- Is it relevant to the larger goal?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+    "slideshow": {
+     "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Solving too much code:\n",
+    "- Spin out functionality into a different module\n",
+    "- Simplify the code\n",
+    "- Delete code\n",
+    "- No really, you should delete code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Use version control"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"https://external-preview.redd.it/u1_S5Vu4FztMR72c9pfl086wbmdlZYVjK77i1IEvTjg.jpg?width=640&crop=smart&auto=webp&s=310af21a5b237f4b53a982afc2077fcdb4b1839c\" width=\"400\">"
+   ]
   }
  ],
  "metadata": {
@@ -163,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
