--- a/01_fundamentals_of_production_code/01_fundamentals_of_production_code.ipynb
+++ b/01_fundamentals_of_production_code/01_fundamentals_of_production_code.ipynb
@@ -1393,8 +1393,8 @@
     }
    },
    "source": [
-    "> \u201cCode is more often read than written.\u201d\n",
-    "   \u2014 Guido van Rossum\n"
+    "> “Code is more often read than written.”\n",
+    "   — Guido van Rossum\n"
    ]
   },
   {
@@ -3760,13 +3760,13 @@
    "source": [
     "### Introduction to Programming Styles\n",
     "\n",
-    "\"Most programming languages are ***procedural***: programs are lists of instructions that tell the computer what to do with the program\u2019s input. C, Pascal, and even Unix shells are procedural languages.\"\n",
+    "\"Most programming languages are ***procedural***: programs are lists of instructions that tell the computer what to do with the program’s input. C, Pascal, and even Unix shells are procedural languages.\"\n",
     "\n",
-    "\"In ***declarative*** languages, you write a specification that describes the problem to be solved, and the language implementation figures out how to perform the computation efficiently. SQL is the declarative language you\u2019re most likely to be familiar with; a SQL query describes the data set you want to retrieve, and the SQL engine decides whether to scan tables or use indexes, which subclauses should be performed first, etc.\"\n",
+    "\"In ***declarative*** languages, you write a specification that describes the problem to be solved, and the language implementation figures out how to perform the computation efficiently. SQL is the declarative language you’re most likely to be familiar with; a SQL query describes the data set you want to retrieve, and the SQL engine decides whether to scan tables or use indexes, which subclauses should be performed first, etc.\"\n",
     "\n",
-    "\"***Object-oriented*** programs manipulate collections of objects. Objects have internal state and support methods that query or modify this internal state in some way. Smalltalk and Java are object-oriented languages. C++ and Python are languages that support object-oriented programming, but don\u2019t force the use of object-oriented features.\"\n",
+    "\"***Object-oriented*** programs manipulate collections of objects. Objects have internal state and support methods that query or modify this internal state in some way. Smalltalk and Java are object-oriented languages. C++ and Python are languages that support object-oriented programming, but don’t force the use of object-oriented features.\"\n",
     "\n",
-    "\"***Functional*** programming decomposes a problem into a set of functions. Ideally, functions only take inputs and produce outputs, and don\u2019t have any internal state that affects the output produced for a given input. Well-known functional languages include the ML family (Standard ML, OCaml, and other variants) and Haskell.\"\n",
+    "\"***Functional*** programming decomposes a problem into a set of functions. Ideally, functions only take inputs and produce outputs, and don’t have any internal state that affects the output produced for a given input. Well-known functional languages include the ML family (Standard ML, OCaml, and other variants) and Haskell.\"\n",
     "\n",
     "(https://docs.python.org/3/howto/functional.html)"
    ]
@@ -4660,8 +4660,8 @@
     }
    },
    "source": [
-    "> \u201cIt doesn\u2019t matter how good your software is, because if the documentation is not good enough, people will not use it.\u201c\n",
-    "    \u2014 Daniele Procida\n"
+    "> “It doesn’t matter how good your software is, because if the documentation is not good enough, people will not use it.“\n",
+    "    — Daniele Procida\n"
    ]
   },
   {
@@ -4672,8 +4672,8 @@
     }
    },
    "source": [
-    "> \u201cCode tells you how; Comments tell you why.\u201d\n",
-    "   \u2014 Jeff Atwood (aka Coding Horror)"
+    "> “Code tells you how; Comments tell you why.”\n",
+    "   — Jeff Atwood (aka Coding Horror)"
    ]
   },
   {
@@ -4762,7 +4762,7 @@
    },
    "source": [
     "```\n",
-    "sphinx-apidoc [OPTIONS] -o <OUTPUT_PATH> <MODULE_PATH> [EXCLUDE_PATTERN \u2026]\n",
+    "sphinx-apidoc [OPTIONS] -o <OUTPUT_PATH> <MODULE_PATH> [EXCLUDE_PATTERN …]\n",
     "```"
    ]
   },
@@ -5938,7 +5938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
