--- a/99_other_material/meme_treasury.ipynb
+++ b/99_other_material/meme_treasury.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Debugging"
    ]
@@ -12,7 +10,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://i.redd.it/ytitd72wz2b11.jpg\" width=\"400\">"
@@ -22,16 +20,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Commenting your code is important\n",
     "\n",
@@ -42,7 +41,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -50,7 +52,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "Why this is needed\n",
@@ -62,7 +64,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -70,7 +75,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "why git is important\n",
@@ -82,7 +87,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -90,7 +98,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "Why containers are important\n",
@@ -101,7 +109,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/rkczpah5u2c41.jpg?width=640&crop=smart&auto=webp&s=0d8f791f7e40f34e5e03f1c6302a0efe584988e7\" width=400 />"
@@ -110,7 +118,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/e8k3k4u0nqv41.png?width=640&crop=smart&auto=webp&s=f317522dedcf1023458447633f51b3394add283c\" width=400 />"
@@ -119,7 +127,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/rh977vd6pvb41.jpg?width=640&crop=smart&auto=webp&s=6063b50ecc7b4b13edd1fb2adb51a76547c54cd2\" width=400 />"
@@ -128,7 +136,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/nvrpt44due141.jpg?width=640&crop=smart&auto=webp&s=29fc90a3faf4f4bbcbbbbbfd2aa94b306255695b\" width=400 />"
@@ -137,7 +145,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/mar8p5zhhm131.jpg?width=640&crop=smart&auto=webp&s=957cfba55d8fbd56cdf08be5600cdda3f7073a3f\" width=400 />"
@@ -146,7 +154,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/78wm8uwn5xz31.jpg?width=640&crop=smart&auto=webp&s=3d41720241fe52c072ddde6f09b39356b2420c3c\" width=400 />"
@@ -155,7 +163,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://i.redd.it/uxs5wnj01ev41.jpg\" width=400 />"
@@ -164,7 +172,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/hb2n8l3yogb41.jpg?width=640&crop=smart&auto=webp&s=cbf9a4d90a06d88cba3139f780045c42fa99800f\" width=400 />"
@@ -173,7 +181,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/wvh152fq18c31.png?width=640&crop=smart&auto=webp&s=05be4abc9d85f9370d8ed8fb3ff484bbe39899fd\" width=400 />"
@@ -196,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
